fix map nerd drag issue + remove on mobile

--- a/app/scss/partials/_game-card.scss
+++ b/app/scss/partials/_game-card.scss
@@ -73,6 +73,9 @@
 	}
 
 	&.map-nerd {
+		@media (max-width: 767px) {
+			display: none;
+		}
 		.background {
 			&::before {
 				background-image: url('/img/cards/map-nerd.webp');
